[gd_scene load_steps=4 format=3 uid="uid://b0gv2mvive5if"]

[ext_resource type="Script" uid="uid://c7oik103j54eu" path="res://otros-juegos/otrosJuegos.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cahl22sko5yhv" path="res://Iconos/icono_atras.png" id="4"]
[ext_resource type="Theme" uid="uid://y78cdfneo2is" path="res://Art/boton_volver.tres" id="5"]

[node name="otrosJuegos" type="Node2D"]
script = ExtResource("1")

[node name="contenedorTitulo" type="MarginContainer" parent="."]
theme_override_constants/margin_left = 20

[node name="volver" type="Button" parent="contenedorTitulo"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5")
icon = ExtResource("4")

[node name="contenedorGeneral" type="MarginContainer" parent="."]
size_flags_horizontal = 3

[node name="scroll" type="ScrollContainer" parent="contenedorGeneral"]
layout_mode = 2

[node name="vertical" type="VBoxContainer" parent="contenedorGeneral/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[connection signal="pressed" from="contenedorTitulo/volver" to="." method="_on_volver_pressed"]
